--- a/indexenchanté.html
+++ b/indexenchanté.html
@@ -34,11 +34,10 @@
 	<header>
 		<div>
 			<figure class="header">
-				<a ref="#"></a class="icon header"><i class="fas fa-arrow-left"></i>
+				<a ref="#"><i class="fas fa-arrow-left"></i></a>
 				<a href="#"
 					><img src="images/logo/ohmyfood@2x.svg" alt="logo_ohmyfood"
 				/></a>
-				
 			</figure>
 		</div>
 	</header>
