--- a/indexfrancaise.html
+++ b/indexfrancaise.html
@@ -1,136 +1,141 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="fr">
-<!--html-->
+	<!--html-->
 
-        <head>
-        <!--head-->
-                            <meta charset="utf 8">
-             <meta name="viewport" content="width=device-width, initial-
-             scale=1.0">
+	<head>
+		<!--head-->
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-
+             scale=1.0"
+		/>
 
-            <script src="https://kit.fontawesome.com/129ab68de1.js" crossorigin="anonymous"></script>
+		<script
+			src="https://kit.fontawesome.com/129ab68de1.js"
+			crossorigin="anonymous"
+		></script>
 
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&
-            family=Shrikhand&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&
+            family=Shrikhand&display=swap"
+			rel="stylesheet"
+		/>
 
-            <title>Réserver le menu qui vous convient</title>
-            <link rel="stylesheet" href="css/style.css">
+		<title>Réserver le menu qui vous convient</title>
+		<link rel="stylesheet" href="css/style.css" />
+	</head>
+	<!--head-->
 
+	<body>
+		<!--body-->
+		<div id="bloc page">
+			<!--bloc page-->
 
-        </head>
-         <!--head-->
+			<!--header-->
+			<header>
+				<div>
+					<a ref="index.html"><i class="fas fa-arrow-left"></i></a>
+					<a href="#"
+						><img src="images/logo/ohmyfood@2x.svg" alt="logo_ohmyfood"
+					/></a>
+				</div>
+			</header>
+			<!--header-->
 
-    <body>
-    <!--body-->
-                     <div id="bloc page">
-        <!--bloc page-->
+			<main class="bloc page">
+				<!--main-->
+				<!--section-->
+				<section>
+					<figure>
+						<img
+							src="C:\Users\bal65\Documents\Ohmyfood\images\restaurants\a_la_francaise.jpg"
+						/>"
+					</figure>
+				</section>
+				<h1>À la française</h1>
+				<span class="heart"><i class="far fa-heart"></i></span>
+				<!--section-->
+				<section>
+					<!--section-->
+					<section class="entrees">
+						<p>ENTRÉES</p>
 
-            <!--header-->
-            <header>
-                <div>
-                    <a ref="#"></a class="icon header"><i class="fas fa-arrow-left"></i>
-                    <a href="#"><img src="images/logo/ohmyfood@2x.svg" alt="logo_ohmyfood"></a>
-                </div>
-            </header>
-            <!--header-->
+						<p>Tartare de poulpe acidulé<br />Aux zests d'orange</p>
+						<p class="prix">25€</p>
+						<p>Velouté de légumes d'antan<br />Carotte, panais, topinambour</p>
+						<p class="prix">35E</p>
+						<p>Soupe à l'oignon</p>
+						<p>Revisitée</p>
+						<p class="prix">20€</p>
+					</section>
+					<!--section-->
 
-            <main  class="bloc page">
-            <!--main-->
-                <!--section-->
-                <section>
-                    <figure>
-                        <img src="C:\Users\bal65\Documents\Ohmyfood\images\restaurants\a_la_francaise.jpg">"
-                    </figure>
-                </section>
-                    <h1>À la française</h1>
-                    <span class="heart"><i class="far fa-heart"></i></span>
-                    <!--section-->
-                    <section>
-                        <!--section-->
-                        <section class="entrees">
+					<!--section-->
+					<section class="plats">
+						<p>PLATS</p>
+						<p>coquilles de Saint-Jacques</p>
+						<p>Accompagnées d'une purée de panais</p>
+						<p class="prix">40€</p>
 
-                            <p>ENTRÉES</p>
+						<p>Magret de canard</p>
+						<p>Et parmentier de pommes de terre</p>
+						<p class="prix">35€</p>
 
-                            <p>Tartare de poulpe acidulé<br>Aux zests d'orange</p>
-                            <p class="prix">25€</p>
-                            <p>Velouté de légumes d'antan<br>Carotte, panais, topinambour</p>
-                            <p class="prix">35E</p>
-                            <p>Soupe à l'oignon</p>
-                            <p>Revisitée</p>
-                            <p class="prix">20€</p>
-                        
-                        </section>
-                        <!--section-->
+						<p>Pigeonneau d'Ille-et-Villaine</p>
+						<p>Sur son lit de gnocchis aux légumes</p>
+						<p class="prix">44€</p>
+					</section>
+					<!--section-->
 
-                        <!--section-->
-                        <section class="plats">
-                            <p>PLATS</p>
-                            <p>coquilles de Saint-Jacques</p>
-                            <p>Accompagnées d'une purée de panais</p>
-                            <p class="prix">40€</p>
+					<!--section-->
+					<section class="desserts">
+						<p>DESSERTS</p>
 
-                            <p>Magret de canard</p>
-                            <p>Et parmentier de pommes de terre</p>
-                            <p class="prix">35€</p>
+						<p>Pétales de violettes glacés</p>
+						<p>Et purée de noisettes</p>
+						<p class="prix">18€</p>
 
-                            <p>Pigeonneau d'Ille-et-Villaine</p>
-                            <p>Sur son lit de gnocchis aux légumes</p>
-                            <p class="prix">44€</p>
-                        </section>
-                        <!--section-->
+						<p>Fondant au chocolat</p>
+						<p>Revisité</p>
+						<p class="prix">22€</p>
 
-                        <!--section-->
-                        <section class="desserts">
-                            <p>DESSERTS</p>
+						<p>Millefeuille croustillant</p>
+						<p>Myrtilles et pates d'amande</p>
+						<p class="prix">23€</p>
+					</section>
+					<!--/section-->				
 
-                            <p>Pétales de violettes glacés</p>
-                            <p>Et purée de noisettes</p>
-                            <p class="prix">18€</p>
-
-                            <p>Fondant au chocolat</p>
-                            <p>Revisité</p>
-                            <p class="prix">22€</p>
-
-                            <p>Millefeuille croustillant</p>
-                            <p>Myrtilles et pates d'amande</p>
-                            <p class="prix">23€</p>
-                        </section>
-                        <!--section-->
-
-                        <!--section-->
-                        </section>
-                        <!--section-->
-
-                         <!--section-->
-                        <section>
-                            <p>Commander</p>
-                        </section>
-                        <!--section-->
-
-                        <!--footer-->
-                        <footer>
-                            <div class="footer">
-                                <h1>ohmyfood</h1>
-                                <ul>
-                                    <li><i class="fas fa-utensils" aria-hidden="true"></i><a href="#" class="cherche">Proposer
-                                    un
-                                    restaurant</a></li>
-                                    <li><i class="fas fa-hands-helping" aria-hidden="true"></i><a href="#"
-                                    class="cherche">Devenir
-                                    partenaire</a></li>
-                                    <li><a href="#" class="fine">Mentions légales</a></li>
-                                    <li><a href="#" class="fine">Contact</a></li>
-                                </ul>
-                            </div>
-                         </footer>
-                        <!--footer-->
-                
-            </main>
-            <!--bloc page-->
-    </body>
-    <!--body-->
-
+				<!--section-->
+				<section>
+					<p>Commander</p>
+				</section>
+				<!--/section-->
+			</main>
+			<!--footer-->
+			<footer>
+				<div class="footer">
+					<h1>ohmyfood</h1>
+					<ul>
+						<li>
+							<i class="fas fa-utensils" aria-hidden="true"></i
+							><a href="#" class="cherche">Proposer un restaurant</a>
+						</li>
+						<li>
+							<i class="fas fa-hands-helping" aria-hidden="true"></i
+							><a href="#" class="cherche">Devenir partenaire</a>
+						</li>
+						<li><a href="#" class="fine">Mentions légales</a></li>
+						<li><a href="#" class="fine">Contact</a></li>
+					</ul>
+				</div>
+			</footer>
+			<!--footer-->
+		</div>
+		<!--bloc page-->
+	</body>
+	<!--body-->
 </html>
 <!--html-->
