--- a/indexpalette.html
+++ b/indexpalette.html
@@ -4,7 +4,8 @@
 
 	<head>
 		<!--head-->
-		<meta charset="utf 8">
+
+		<meta charset="utf-8" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-
@@ -19,13 +20,12 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&
-        family=Shrikhand&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap"
 			rel="stylesheet"
 		/>
 
 		<title>Réserver le menu qui vous convient</title>
-		
+
 		<link rel="stylesheet" href="css/menu.css" />
 	</head>
 	<!--/head-->
@@ -37,9 +37,10 @@
 
 			<!--header-->
 			<header>
-				<a href="index.html"><i class="fas fa-arrow-left"></i></a>
-				<a href="#"
-					><img src="images/logo/ohmyfood@2x.svg" alt="logo_ohmyfood"
+				<a href="index.html"
+					><i class="fas fa-arrow-left"></i>
+
+					<img src="images/logo/ohmyfood@2x.svg" alt="logo_ohmyfood"
 				/></a>
 			</header>
 			<!--/header-->
@@ -55,9 +56,12 @@
 
 					<div class="h2">
 						<h2>La palette du goût</h2>
-						<label class="checkbox-like checkbox-like--position">
-							<span class="heart"><i class="far fa-heart"></i></span>
-							<span class="fas fa-hearth"></span>
+						<label class="checkbox">
+							<input type checkbox />
+							<span class="heart"
+								><i class="far fa-heart unchecked"></i
+							></span>
+							<span class="fas fa-hearth checked"></span>
 						</label>
 					</div>
 				</section>
@@ -66,18 +70,19 @@
 					<h3><span class="titre_underline">ENTR</span>ÉES</h3>
 
 					<div class="bouton_choix">
-						<p class="plat">
-							Fricassée d'escargot
-							<span class="duo">Au piment d'Espelette</span>
-						</p>
-
+						<div class="menu">
+							<p class="plat">
+								Fricassée d'escargot<br />
+								<span class="duo">Au piment d'Espelette</span>
+							</p>
+						</div>
 						<p class="prix">25€</p>
 						<div class="check"><i class="far fa-check-circle"></i></div>
 					</div>
 
 					<div class="bouton_choix">
 						<p class="plat">
-							Foie gras de canard mi-cuit
+							Foie gras de canard mi-cuit<br />
 							<span class="duo">Et ses copeaux de truffe noire</span>
 						</p>
 						<p class="prix">35€</p>
@@ -86,7 +91,7 @@
 
 					<div class="bouton_choix">
 						<p class="plat">
-							Oeuf au plat
+							Oeuf au plat<br />
 							<span class="duo">Assaisonné à la truffe sur lit de caviar</span>
 						</p>
 						<p class="prix">20€</p>
@@ -101,6 +106,8 @@
 					<div class="bouton_choix">
 						<p class="plat">
 							Filet de boeuf aux herbes
+							<br />
+
 							<span class="duo">Accompagné de sa ribambelle de légumes</span>
 						</p>
 						<p class="prix">40€</p>
@@ -108,16 +115,22 @@
 					</div>
 
 					<div class="bouton_choix">
-						<p class="plat">Parmentier de queue de boeuf</p>
-						<span class="duo">À la truffe noire sur sa purée de panais</span>
+						<p class="plat">
+							Parmentier de queue de boeuf<br />
+							<span class="duo">À la truffe noire sur sa purée de panais</span>
+						</p>
+
 						<p class="prix">35€</p>
 						<div class="check"><i class="far fa-check-circle"></i></div>
 					</div>
 
 					<div class="bouton_choix">
-						<p class="plat">Filet de turbot</p>
-						<span class="duo">Aux agrumes</span>
-						<p class="prix">44€</p>
+						<p class="plat">
+							Filet de turbot<br />
+							<span class="duo">Aux agrumes</span>
+						</p>
+
+						<div><p class="prix">44€</p></div>
 						<div class="check"><i class="far fa-check-circle"></i></div>
 					</div>
 					<!--section-->
@@ -127,35 +140,47 @@
 					<h3><span class="titre_underline">DESS</span>ERTS</h3>
 
 					<div class="bouton_choix">
-						<p class="plat">Paris-Brest</p>
-						<span class="duo">Revisité</span>
+						<p class="plat">
+							Paris-Brest<br />
+							<span class="duo">Revisité</span>
+						</p>
+
 						<p class="prix">18€</p>
 						<div class="check"><i class="far fa-check-circle"></i></div>
 					</div>
 
 					<div class="bouton_choix">
-						<p class="plat">Macaron au chocolat d'exception</p>
-						<span class="duo">Et glace à la vanille de Madagascar</span>
+						<p class="plat">
+							Macaron au chocolat d'exception<br />
+							<span class="duo">Et glace à la vanille de Madagascar</span>
+						</p>
+
 						<p class="prix">22€</p>
 						<div class="check"><i class="far fa-check-circle"></i></div>
 					</div>
 
 					<div class="bouton_choix">
-						<p class="plat">Mousse au chocolat</p>
-						<span class="duo">Au piment d'Espelette et à la truffe noire</span>
+						<p class="plat">
+							Mousse au chocolat<br />
+							<span class="duo"
+								>Au piment d'Espelette et à la truffe noire</span
+							>
+						</p>
+
 						<p class="prix">23€</p>
 						<div class="check"><i class="far fa-check-circle"></i></div>
 					</div>
 				</section>
 				<!--section-->
-				<div class ="command">
-					<p>Commander</p>
-				</div>
-				<!--/section-->
+				<!--form-->				
+				<form>
+					<button><span>Commander</span></button>
+				</form>
+				<!--/form-->
 			</main>
-
+			<!--main-->
+			<!--footer-->
 			<footer>
-				<!--footer-->
 				<h1>ohmyfood</h1>
 				<ul>
 					<li>
@@ -167,7 +192,9 @@
 						<a href="#" class="cherche">Devenir partenaire</a>
 					</li>
 					<li><a href="#" class="fine">Mentions légales</a></li>
-					<li><a href="#" class="fine">Contact</a></li>
+					<li>
+						<a href="mailto:contact@ohmyfood.com" class="mail">Contact</a>
+					</li>
 				</ul>
 			</footer>
 			<!--/footer-->
