--- a/enchantee.html
+++ b/enchantee.html
@@ -25,7 +25,7 @@
 		/>
 
 		<title>Réserver le menu qui vous convient</title>
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="scss/enchantestyles.scss" />
 
 		<!--head-->
 	</head>
@@ -34,7 +34,7 @@
 	<header>
 		<div>
 			<figure class="header">
-				<a ref="#"><i class="fas fa-arrow-left"></i></a>
+				<a href="index.html"><i class="fas fa-arrow-left"></i></a>
 				<a href="#"
 					><img src="images/logo/ohmyfood@2x.svg" alt="logo_ohmyfood"
 				/></a>
@@ -47,26 +47,39 @@
 		<!--body-->
 		<div id="bloc page">
 			<!--bloc page-->
+
+			<section class="vignette_en_tete">
+					<img
+						class="photo_restau"
+						src="images/restaurants/la_note_enchantee.jpg"
+						alt="photo assiette
+					menu"
+					/>
 			<!--section entrees-->
 			<section class="entrees">
+				
 				<p>La note enchantée</p>
 
 				<p>ENTRÉES</p>
 				<p>>Ravioles de foie gras</p>
 				<p>Accompagnés de leur crème à la truffe</p>
 				<p>25€</p>
+				<i class="far fa-check-circle"></i>
 
 				<p>Caviar osciètre</p>
 				<p>Sur blini à la farine de blé noir</p>
 				<p>35€</p>
+				<i class="far fa-check-circle"></i>
 
 				<p>Homard et espuma de potiron</p>
 				<p>Mariné aux zestes d'orange</p>
 				<p>20€</p>
+				<i class="far fa-check-circle"></i>
 
 				<p>>Foie gras de canard cuit entier</p>
 				<p>Confiture de figue et pain toasté</p>
 				<p>35€</p>
+				<i class="far fa-check-circle"></i>
 			</section>
 			<!--section-->
 
@@ -77,31 +90,38 @@
 				<p>Noix de coquilles Saint-Jacques</p>
 				<p>Sur lit de purée de céleri-rave</p>
 				<p>40€</p>
-				>
+				<i class="far fa-check-circle"></i>
 
 				<p>Langoustine poêlée</p>
 				<p>Purée de patate douce</p>
 				<p>35€</p>
+				<i class="far fa-check-circle"></i>
 
 				<p>Mijoté de queue de boeuf</p>
 				<p>Et riz sauvage aux zestes de citron</p>
 				<p>44€</p>
+				<i class="far fa-check-circle"></i>
 			</section>
 			<!--section-->
+
 			<!--section desserts -->
 			<section class="desserts">
 				<p>DESSERTS</p>
+
 				<p>Macaron noisette et chocolat</p>
 				<p>>Glace au caramel brun et sel de Guérande</p>
 				<p>18€</p>
+				<i class="far fa-check-circle"></i>
 
 				<p>Baba au rhum revisité</p>
 				<p>Avec son coulis de citron</p>
 				<p>22€</p>
+				<i class="far fa-check-circle"></i>
 
 				<p>Tarte au citron meringuée</p>
 				<p>Déstructurée</p>
 				<p>23€</p>
+				<i class="far fa-check-circle"></i>
 			</section>
 			<!--section-->
 
