--- a/palette.html
+++ b/palette.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<!--html-->
-
 	<head>
-		<!--head-->
-
 		<meta charset="utf-8" />
 		<meta
 			name="viewport"
@@ -25,8 +21,7 @@
 		/>
 
 		<title>Réserver le menu qui vous convient</title>
-
-		<link rel="stylesheet" href="css/menu.css" />
+		<link rel="stylesheet" href="css/menu.min.css" />
 	</head>
 	<!--/head-->
 
@@ -37,11 +32,9 @@
 
 			<!--header-->
 			<header>
-				<a href="index.html"
-					><i class="fas fa-arrow-left"></i>
+				<a href="index.html"><i class="fas fa-arrow-left"></i></a>
 
-					<img src="images/logo/ohmyfood@2x.svg" alt="logo_ohmyfood"
-				/></a>
+				<a><img src="images/logo/ohmyfood@2x.svg" alt="logo_ohmyfood" /></a>
 			</header>
 			<!--/header-->
 
@@ -56,13 +49,8 @@
 
 					<div class="h2">
 						<h2>La palette du goût</h2>
-						<label class="checkbox">
-							<input type checkbox />
-							<span class="heart"
-								><i class="far fa-heart unchecked"></i
-							></span>
-							<span class="fas fa-hearth checked"></span>
-						</label>
+
+						<div class="heart"><i class="far fa-heart"></i></div>
 					</div>
 				</section>
 
@@ -76,8 +64,8 @@
 								<span class="duo">Au piment d'Espelette</span>
 							</p>
 						</div>
-						<p class="prix">25€</p>
-						<div class="check"><i class="far fa-check-circle"></i></div>
+						<div class="pri"><p class="prix">25€</p></div>
+						<div class="check"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="bouton_choix">
@@ -86,7 +74,7 @@
 							<span class="duo">Et ses copeaux de truffe noire</span>
 						</p>
 						<p class="prix">35€</p>
-						<div class="check"><i class="far fa-check-circle"></i></div>
+						<div class="check"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="bouton_choix">
@@ -95,7 +83,7 @@
 							<span class="duo">Assaisonné à la truffe sur lit de caviar</span>
 						</p>
 						<p class="prix">20€</p>
-						<div class="check"><i class="far fa-check-circle"></i></div>
+						<div class="check"><i class="fas fa-check-circle"></i></div>
 					</div>
 					<!--section-->
 				</section>
@@ -111,7 +99,7 @@
 							<span class="duo">Accompagné de sa ribambelle de légumes</span>
 						</p>
 						<p class="prix">40€</p>
-						<div class="check"><i class="far fa-check-circle"></i></div>
+						<div class="check"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="bouton_choix">
@@ -121,7 +109,7 @@
 						</p>
 
 						<p class="prix">35€</p>
-						<div class="check"><i class="far fa-check-circle"></i></div>
+						<div class="check"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="bouton_choix">
@@ -131,7 +119,7 @@
 						</p>
 
 						<div><p class="prix">44€</p></div>
-						<div class="check"><i class="far fa-check-circle"></i></div>
+						<div class="check"><i class="fas fa-check-circle"></i></div>
 					</div>
 					<!--section-->
 				</section>
@@ -146,7 +134,7 @@
 						</p>
 
 						<p class="prix">18€</p>
-						<div class="check"><i class="far fa-check-circle"></i></div>
+						<div class="check"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="bouton_choix">
@@ -156,7 +144,7 @@
 						</p>
 
 						<p class="prix">22€</p>
-						<div class="check"><i class="far fa-check-circle"></i></div>
+						<div class="check"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="bouton_choix">
@@ -168,11 +156,11 @@
 						</p>
 
 						<p class="prix">23€</p>
-						<div class="check"><i class="far fa-check-circle"></i></div>
+						<div class="check"><i class="fas fa-check-circle"></i></div>
 					</div>
 				</section>
 				<!--section-->
-				<!--form-->				
+				<!--form-->
 				<form>
 					<button><span>Commander</span></button>
 				</form>
